[gd_scene load_steps=5 format=3 uid="uid://bkn1pcy0uq70y"]

[ext_resource type="Theme" uid="uid://buo32rgi3lfa" path="res://Resources/main_theme.tres" id="1_pl4fr"]
[ext_resource type="Script" path="res://Main/Info/info_panel.gd" id="2_pfmxg"]
[ext_resource type="Texture2D" uid="uid://dnixi4kfbe1m5" path="res://Main/InfoPanel.png" id="3_h0v06"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hg87g"]
texture = ExtResource("3_h0v06")
texture_margin_left = 30.0
texture_margin_top = 34.5359
texture_margin_right = 30.0
texture_margin_bottom = 29.0718
region_rect = Rect2(0, 0, 530, 180)

[node name="InfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pl4fr")
script = ExtResource("2_pfmxg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -404.0
offset_right = 273.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hg87g")

[node name="Exit" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 461.0
offset_top = 32.0
offset_right = 511.0
offset_bottom = 107.0
focus_mode = 0
theme_override_font_sizes/font_size = 64
text = "X
"
flat = true

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Statistics
"
horizontal_alignment = 1

[node name="Spacer" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="CurrentSouls" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Current Souls: 
"

[node name="AllTimeSouls" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "All Time Souls:
"

[node name="HighestSouls" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Most Souls Held: 
"

[node name="SoulsPerSecond" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Souls Per Second: 
"

[node name="SoulsPerClick" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Souls Per Click: 
"

[connection signal="pressed" from="Panel/Exit" to="." method="_on_exit_pressed"]
